[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/minigame_panel.gd" id="1"]

[node name="MiniGamePanel" type="Control"]
anchors_preset = 8
anchor_bottom = 1.0
anchor_right = 1.0
visible = false
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 32
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 42)

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Header"]
size_flags_horizontal = 3
text = "Mini-Game"
uppercase = true

[node name="Timer" type="Label" parent="MarginContainer/VBoxContainer/Header"]
size_flags_horizontal = 1
horizontal_alignment = 2
text = "Time: 45"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
text = "End"

[node name="GameContainer" type="Control" parent="MarginContainer/VBoxContainer"]
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 300)

